getting quotes from API

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
             </h1>
 
             <h4>"Eleveate Your Mind"</h4>
-
-            <div class="quoteDisplay" id="quoteDisplay">
-                <p>Click Generate to be inspired!</p>
+            <div class="quoteDisplay">
+                <div id="Quote">
+                    Click Generate to be inspired!
+                </div>
+                <div id="Author">
+                    -Author
+                </div>
             </div>
 
             <button class="generateQuote" type="button" onclick="generateQuote()">Generate</button>
